# rf-commands-repo

./: .env.example  CONTRIBUTING.md  README.md  app.py  data.py  pyproject.toml  requirements.txt  settings.py
data/: devices.py
route/: device_route.py  rest_common.py  rf_route.py
src/: app.py  settings.py
src/data/: devices.py  models.py  rf.py
src/route/: device_route.py  rest_common.py  rf_route.py
static/.well-known/: security.txt
